Ges edited urge11

--- a/escrito/urge11.tex
+++ b/escrito/urge11.tex
@@ -54,6 +54,8 @@
 %    | ~G | u   | s   |
 %    |----+-----+-----|
  
+% Ges: leer cap Colomer y Negreto 2002 La gobernanza... in Mora y Donato Rels entre gob y congreso IIJ
+% Urgencia = suma+inmediata ... hasta 2014 urgencia sólo para suma
 
 \begin{document}
 
@@ -62,7 +64,7 @@
 \title{Presidents on the fast track: Fighting floor amendments in the Chilean Cámara\thanks{An earlier version was presented at the 2017 annual meeting of the American Political Science Association, San Francisco, CA. The authors are grateful to Roberto Bustos, Alvaro Villarroel, and the staff of the Senate's Hacienda Committee, and especially to Sebastián Soto Velasco for help understanding urgency authority; to Deputy Patricio Vallespín for making the calls that scheduled interviews with key congressional personnel; to Mónica Arretche, Ernesto Calvo, José Antonio Cheibub, Federico Estévez, Adrián Lucardi, and Michelle Taylor-Robinson for comments and critiques. Eric Magar acknowledges financial support from the Asociación Mexicana de Cultura A.C.\ and CONACYT's Sistema Nacional de Investigadores. Valeria Palanza acknowledges support from Proyecto Fondecyt No. 1140974, and from the Millennium Nucleus for the Study of Stateness and Democracy in Latin America, Project \#NS100014. Gisela Sin acknowledges the support of Office of the Vice Chancellor for Research and the Center for Latin American Studies, University of Illinois at Urbana-Champaign. The authors are responsible for mistakes and shortcomings in the study.}}
 \author{Eric Magar \\ ITAM \and
         Valeria Palanza \\ Univ.\ Católica de Chile \and  
-        Gisela Sin \\ Univ.\ of Illinois, Urbana-Champaign 
+        Gisela Sin \\ University of Illinois
 }
 \date{\today}
 \maketitle
@@ -430,7 +432,7 @@ During the legislative process, the president's choice set has two alternatives:
   \end{tikzpicture}
 \end{figure}
 
-Model analysis is analogous to \citet{dion.huber.1996}. The game has a unique, sub-game perfect equilibrium that we do not derive formally here.\footnote{Equilibrium is akin to \citet{magar.nd,romer.rosenthal.1978,cox.mccubbins.2005,gerber.1996}.} We elaborate the bargaining logic with the example in Figure \ref{F:example}. The points $P$, $C$, and $F$ on the line represent the ideal points of the president, the committee, and the floor median, respectively, while $q$ is the status quo. We assume Euclidean single-peaked and symmetric preferences, so $F_q$ is the symmetric reflection of $q$ on the unidimensional line using $F$ as mirror, i.e, it is the floor median's point of indifference given the location of the status quo. Other relevant reflections are noted likewise; some appear in gray and will be relevant later. Given the model's assumptions, preferred sets are easily gauged: the floor median finds policy under the larger dashed pyramid ($x_C \in [q,F_q]$) preferable to the status quo; likewise, the president prefers policy under the smaller pyramid ($x_C \in [q,P_q]$) to the status quo.
+Model analysis is analogous to \citet{dion.huber.1996}. The game has a unique, sub-game perfect equilibrium that we do not derive formally here.\footnote{Equilibrium is akin to \citet{magar.nd,romer.rosenthal.1978,cox.mccubbins.2005,gerber.1996}.} We elaborate the bargaining logic with the example in Figure \ref{F:example}. The points $P$, $C$, and $F$ on the line represent the ideal points of the president, the committee, and the floor median, respectively, while $q$ is the status quo. We assume Euclidean single-peaked and symmetric preferences, so $F_q$ is the symmetric reflection of $q$ on the unidimensional line using $F$ as mirror, i.e, it is the floor median's point of indifference given the location of the status quo. Other relevant reflections are noted likewise; some appear in gray and will be relevant later. Given the model's assumptions, preferred sets are easily gauged: the floor median finds policy under the larger dashed pyramid ($x_C \in [q,F_q]$) preferable to the status quo; likewise, the president prefers policy under the smaller pyramid ($x_C \in [q,P_q]$) to the status quo. 
 
 %As the model assumes standard Euclidian preferences and reflections point to equidistance in the opposite side of an ideal point, preference is easily gauged: the floor finds policy under the larger dashed pyramid ($x_C \in [q,F_q]$) preferable to the status quo; likewise, the president prefers policy under the smaller pyramid ($x_C \in [q,P_q]$) to the status quo. 
 
