--- a/gesValeriaEric/paper/urge11.tex
+++ b/gesValeriaEric/paper/urge11.tex
@@ -54,6 +54,8 @@
 %    | ~G | u   | s   |
 %    |----+-----+-----|
  
+% Ges: leer cap Colomer y Negreto 2002 La gobernanza... in Mora y Donato Rels entre gob y congreso IIJ
+% Urgencia = suma+inmediata ... hasta 2014 urgencia sólo para suma
 
 \begin{document}
 
@@ -62,7 +64,7 @@
 \title{Presidents on the fast track: Fighting floor amendments in the Chilean Cámara\thanks{An earlier version was presented at the 2017 annual meeting of the American Political Science Association, San Francisco, CA. The authors are grateful to Roberto Bustos, Alvaro Villarroel, and the staff of the Senate's Hacienda Committee, and especially to Sebastián Soto Velasco for help understanding urgency authority; to Deputy Patricio Vallespín for making the calls that scheduled interviews with key congressional personnel; to Mónica Arretche, Ernesto Calvo, José Antonio Cheibub, Federico Estévez, Adrián Lucardi, and Michelle Taylor-Robinson for comments and critiques. Eric Magar acknowledges financial support from the Asociación Mexicana de Cultura A.C.\ and CONACYT's Sistema Nacional de Investigadores. Valeria Palanza acknowledges support from Proyecto Fondecyt No. 1140974, and from the Millennium Nucleus for the Study of Stateness and Democracy in Latin America, Project \#NS100014. Gisela Sin acknowledges the support of Office of the Vice Chancellor for Research and the Center for Latin American Studies, University of Illinois at Urbana-Champaign. The authors are responsible for mistakes and shortcomings in the study.}}
 \author{Eric Magar \\ ITAM \and
         Valeria Palanza \\ Univ.\ Católica de Chile \and  
-        Gisela Sin \\ Univ.\ of Illinois, Urbana-Champaign 
+        Gisela Sin \\ University of Illinois
 }
 \date{\today}
 \maketitle
@@ -70,7 +72,7 @@
 %\begin{center} \textbf{$\rightarrow$~~Preliminary draft~~$\leftarrow$} \\ (please inquire for new version, \small{\url{emagar@itam.mx}})  \end{center}
 
 \begin{abstract}
-\noindent Among the Chilean President's formidable proactive legislative powers is fast-track authority, also called urgency authority. Lawmakers face a short deadline to discuss and vote bills in this track. Extant research has shown that most executive proposals become urgent at some stage, and that urgency correlates with the odds of passage, but it found little evidence that it speeds consideration of the president's agenda in Congress. This paper shows that the main reason behind the use of fast-track authority is not to speed legislation along, but instead to give presidents the ability to shield bills from floor amendments. Presidents' fast-track authority is similar to imposing a "closed rule". The paper tests hypotheses derived from a formal model of restrictive rules with data from the 1998--2014 period.
+\noindent Among Latin American president's formidable proactive legislative powers is fast-track authority, also called urgency authority. Seven presidents have the power to impose lawmakers a short deadline to discuss and vote bills in this track. While in most cases the absence of congressional action brings about some type of punishment for legislators, Chile stands out in that such punishment does not exist. Extant research has shown that most executive proposals become urgent at some stage, and that urgency correlates with the odds of passage, but it found little evidence that it speeds consideration of the president's agenda in Congress. This paper shows that the main reason behind the use of fast-track authority in Chile is not to speed legislation along, but instead to give presidents the ability to shield bills coming from "friendly" committees from any type of floor amendments. Thus, instead of being a mechanism to speed up the process, presidents' fast-track authority is similar to imposing a "closed rule" on the floor. The paper tests hypotheses derived from a formal model of restrictive rules with data from the 1998--2014 period.
 \end{abstract}
 
 % comentarios de Calvo
@@ -190,7 +192,24 @@
 
 \section{Introduction}
 
-Fast-track authority gives presidents the power to set the agenda by imposing a requirement to hold a vote on a bill within a certain period of time, allowing the president to interfere with congress' voting schedule. More specifically, by using this prerogative, presidents can impose a deadline for legislators to discuss and vote legislation. Compared to the US presidential system, where an impatient president has no formal resources to push legislators to act on stagnant legislation, broad reaching fast-track authority seems to contradict classic notions of separation of powers. In Federalist 47, Madison argues that the ``magistrate in whom the whole executive power resides cannot of himself make a law, though he can put a negative on every law'' \citep{madison.47}. The Framers also warn against expediting lawmaking and arresting deliberation. ``In the legislature promptitude of decision is oftener an evil than a benefit'' \citep{hamilton70.1788}. Within this view presidents can veto bills, preventing them from becoming law, but cannot force legislators to act on specific measures.
+%VALE: ACA PRIMER PARRAO ABOUT: Presidents have legislative powers.  One of those decree powers. Another fast track authority. I do think the main difference between them is that in one case tey are not approved by congresss, while in the second they are.  This may have different implications.
+Fast-track authority gives presidents the power to set the agenda by imposing a requirement to hold a vote on a bill within a certain period of time, allowing the president to interfere with congress' voting schedule and floor control. More specifically, by using this prerogative, presidents can impose a deadline to legislators for discussing and voting legislation. 
+%Compared to the US presidential system, where an impatient president has no formal resources to push legislators to act on stagnant legislation, broad reaching
+
+Fast-track authority seems to contradict classic notions of separation of powers. In Federalist 47, Madison argues that the ``magistrate in whom the whole executive power resides cannot of himself make a law, though he can put a negative on every law'' \citep{madison.47}. The Framers also warn against expediting lawmaking and arresting deliberation. ``In the legislature promptitude of decision is oftener an evil than a benefit'' \citep{hamilton70.1788}.
+%Within this view presidents can veto bills, preventing them from becoming law, but cannot force legislators to act on specific measures.
+
+
+% When a bill declared urgent: Always Needs Legislature Support
+%Colombia and Chile: No reversion point if Congress does not comply. Any topic 
+%Brazil: it goes to the top of the schedule and all voting activity in the floor stops (45 days)
+%USA: International Trade Agreements
+
+%If Legislature does not  act within certain number of days, bill becomes law
+%Uruguay: 3/5 of member can remove “urgency” label, no more than 1 urgent bill at a time
+%Ecuador: economic issues, limit in number of urgent bills at one time
+%Paraguay: any subject
+%USA: Howell & Moe (2017) argue for constitutional reform to grant U.S. presidents universal fast track authority 
 
 %\ges{Here we need to make a footnote on the US, that in the US that does not apply for cases where Congress gave the president fast track authority, which has been mostly for Trade agreements with other nations. \\ Not happy about this quote yet, but I think is more appropriate than the previous one.  We need something about separation of powers.}
 
@@ -200,7 +219,18 @@ Fast-track authority gives presidents the power to set the agenda by imposing a 
 % Upon the principles of a free government, inconveniences from the source just mentioned [collective actors] must necessarily be submitted to in the formation of the legislature; but it is unneccessary, and therefore unwise, to introduce them into the constitution of the executive. It is here too that they may be most pernicious. In the legislature promptitude of decision is oftener an evil than a benefit. The differences of opinion and the jarring of parties in that department of the government, though they may sometimes obstruct salutary plans, yet often promote deliberation and circumspection, and serve to check the excesses of the majority. When a resolution too is once taken, the opposition must be at an end. That resolution is a law, and resistance to it is punishable. --> EMM la urgencia opera contra esta delibaración benévola...
 % federalist 47 "The magistrate in whom the whole executive power resides cannot of himself make a law, though he can put a negative on every law" 
 
-Despite these concerns, five constitutions of the Americas give presidents broad fast-track authority: Brazil, Chile, Colombia, Mexico, and Uruguay \citep{morgenstern.2002b}. In Brazil, the president can declare any executive-initiated bill ``urgent'' at any time. The assembly must act on bills marked urgent within forty five days, else the bill takes precedence over all other legislative business. In Colombia, fast-track bills go to the top of the voting schedule immediately, and all activity on the floor stops until legislators vote on the bill. In Uruguay, legislators must act within a pre-specified, short period of time, as failure to do so converts the fast-tracked bill into law.\footnote{However, three-fifths of the membership of either chamber can remove the bill's fast-track status.}  In Mexico, the president can propose up to two urgent bills at the start of each biannual ordinary period, and these bills must be scheduled for floor consideration within 30 days.\footnote{Constitutional articles vesting this authority are the following: Brazil articles 62 and 64; Chile article 74; Colombia article 163; Mexico article 71; and Uruguay article 168.7.}
+Despite these concerns, seven presidential systems of the Americas give executives fast-track authority: Brazil, Chile, Colombia, Ecuador, Mexico, Paraguay, U.S.A., and Uruguay \citep{morgenstern.2002b}. 
+%cite Mercedes Garcia Montero, Nolte, etc. VER MERCEDES BOOK> 
+A shared characteristic of fast track authority among all these countries, except Chile, is that if the legislature fails to act within a certain period, the bill either becomes a law without the legislature's approval, or the whole legislative process comes to a halt until the floor votes on the bill. For example, in Brazil, the president can declare any executive-initiated bill ``urgent'' at any time. The assembly must act on bills marked urgent within forty five days, else the bill takes precedence over all other legislative business. In Uruguay, legislators must act within a pre-specified, short period of time, as failure to do so converts the fast-tracked bill into law.\footnote{However, three-fifths of the membership of either chamber can remove the bill's fast-track status.} Thus, by institutional design, the president has an effective tool to influence the congressional agenda, as she can force Congress to debate and vote on a bill.
+%\GES: me parece que aca lo tenemos que dejar asi, con solo estos dos ejemplos y explayarnos mas en el lit review, mas adelante.  Es la intro!
+ 
+The power of fast track authority in Chile languidece when compared to its counterparts in the Americas. Although in Chile any bill can be declared urgent at any time, and the chamber must discuss and vote on the bill within 30 days (depending on the type of urgency), there are no consequences for non-compliance.when the period provided for congress to act expires, the legislative process does not stop, nor do bills become law automatically. That is, there is no punishment for the legislature if it fails to make a decision within the specified number of days. When the deadline for the expedite process is nearing, the president usually removes the previous urgency and issues a new one. Indded, bills declared urgent take about 29 weeks until they reach the floor, while the rest takes 29.7 weeks. In his study of the urgency prerogative in Chile's first post-transition administration, \citet{siavelis.2002} revealed the high frequency with which President Aylwin qualified bills as urgent, and found mixed evidence on whether such bills had a more expedited legislative process and an improved likelihood of passage. Given that fast track authority does not seem to expedite legislation,one would expect the president not to use them at all. However, this is not the case: about 60 percent of executive proposals are declared urgent during the legislative process. Why?
+
+The existent literature has argued that the benefit of fast-track authority lies in its signaling capacity. Quoting a former legal chief of staff at the Presidency, \citet{berrios.gamboa.fiscChile.2006} describe one type of urgency qualification as ``merely symbolic, exerting no real pressure on Congress'' (p.~117).\footnote{Three types exist in Chile, as we explain below. The authors refer to the least imposing, providing Congress with a thirty-day deadline.} Likewise, \citet{aleman.navia.UrgChi.2009} see degrees of urgency as ``signals of presidential attention'' (p.~404), so the assembly may face unobserved political costs by ignoring or rejecting salient proposals.  
+%I guess my point here is that we should say that there are many other ways by which the president can signal sucha thing?
+
+
+%Fast track authority can be classified into two main types: a bill on fast track may always need the approval of the legislature, or it may become law if Congress does not act within a certain number of days. Among the first type is the urgency authority present in Brazil, Chile, Colombia, and the U.S.  In Colombia, fast-track bills go to the top of the voting schedule immediately, and all activity on the floor stops until legislators vote on the bill. In the U.S., the president has fast track authority on international trade agreements. Among those countries in which an "urgent" bill becomes a lw if the legislature does not approve or reject within a certain number of days, are Ecuador, Paraguay, and Uruguay. In Ecuador, the president has fast track authority only on economic matters and can only marked as urgent one bill at a time. In Paraguay, the president can declare urgency on any bill. In Mexico, the president can propose up to two urgent bills at the start of each biannual ordinary period, and these bills must be scheduled for floor consideration within 30 days.\footnote{Constitutional articles vesting this authority are the following: Brazil articles 62 and 64; Chile article 74; Colombia article 163; Mexico article 71; and Uruguay article 168.7.}
 
 \vp{hay trabajos que analicen estos casos? será necesario revisar los findings de esa literatura y compararlos con lo que nosotros proponemos y nuestros findings?}
 \ges{Soto dice que Ecuador, Paraguay y Dominicana tienen poderes de urgencia tambien, y cita Base de Datos Politicos de las Americas (2008) de Georgetown University.}
@@ -209,19 +239,21 @@ Despite these concerns, five constitutions of the Americas give presidents broad
 %\ges{Little, if any connection.}
 %\vp{we could make a footnote of it, but I'd just leave it}
 
-Regarding the United States, \citet[][:145]{howell.moe.Relic2016} provide an argument in favor of providing presidents with fast-track authority. They argue that in order to have coherent, effective government, reform needs to put the president at the center of the legislative process by giving her fast-track powers: ``presidents should be granted enhanced agenda-setting powers to propose bills to Congress, which Congress should then be required to vote on without amendment, on a strictly majoritarian basis, within a fixed period of time. [...] [T]he Constitution would be amended to grant the president \emph{permanent} fast-track authority over \emph{all} policy matters (including budgets and appointments).'' 
+% ESTO TAMBIEN VA A LIT REVIEW Regarding the United States, \citet[][:145]{howell.moe.Relic2016} provide an argument in favor of providing presidents with fast-track authority. They argue that in order to have coherent, effective government, reform needs to put the president at the center of the legislative process by giving her fast-track powers: ``presidents should be granted enhanced agenda-setting powers to propose bills to Congress, which Congress should then be required to vote on without amendment, on a strictly majoritarian basis, within a fixed period of time. [...] [T]he Constitution would be amended to grant the president \emph{permanent} fast-track authority over \emph{all} policy matters (including budgets and appointments).'' 
 
-A key issue to consider with respect to fast-track rules is the reversion point when Congress fails to act on such bills. It may be that the whole legislative process comes to a halt until the floor votes on the bill (as in the case of Brazil and Colombia), or that the bill automatically becomes law (as in the case of Uruguay), or it may be that by failing to act provisions of the Constitution are violated (under the Howell-Moe proposal for the U.S.). Thus, by institutional design, the president has an effective tool to influence the congressional agenda, as she can force Congress to debate and vote on a bill.
 
-In certain cases, however, failure to act on fast-tracked bills carries no formal consequences. In Chile, for instance, when the period provided for congress to act expires, the legislative process does not stop, nor do bills become law automatically. Analyzing the case, scholars have speculated that the benefit of fast-track authority lies in its signaling capacity. Quoting a former legal chief of staff at the Presidency, \citet{berrios.gamboa.fiscChile.2006} describe one type of urgency qualification as ``merely symbolic, exerting no real pressure on Congress'' (p.~117).\footnote{Three types exist in Chile, as we explain below. The authors refer to the least imposing, providing Congress with a thirty-day deadline.} Likewise, \citet{aleman.navia.UrgChi.2009} see degrees of urgency as ``signals of presidential attention'' (p.~404), so the assembly may face unobserved political costs by ignoring or rejecting salient proposals. In his study of the urgency prerogative in Chile's first post-transition administration, \citet{siavelis.2002} revealed the high frequency with which President Aylwin qualified bills as urgent, and found mixed evidence on whether such bills had a more expedited legislative process and an improved likelihood of passage. 
+This paper builds on the existing literature, but makes a different point. We claim that counter what one might expect, fast-track authority in Chile is neither a signal nor an agenda setting tool, but instead a mechanism that protects the bills sponsored by the president from changes in the floor. When the president labels a bill as urgent, such bill cannot be amended on the floor. In this way, the fast track authority works as a close rule by locking in the bill as it came out from committee.
 
-This paper builds on the existing literature, but makes a different point. We claim that counter what one might expect, fast-track authority in Chile is neither a signal nor an agenda setting tool, but instead a mechanism that incites cooperation between the executive and her party or coalition in Congress. 
+
+
 
 \vp{Pienso que aquí habría que vincular esto a la literatura. How does this case speak to the fast-track authority literature? What can those scholars learn from reading this paper? part of our point is that urgencias in Chile are NOT fast-track authority, but rather, a form of imposing a closed rule and locking in policy preferences, no? so how does this relate back to the literature that we claim to speak to?}
 
-We find that the literature has largely ignored an important consequence of this rule: when bills are brought to the floor having been designated urgent, \emph{they cannot be modified}.\footnote{This is true since March of 2014. Before then, it was true only for one type of urgency, ``supreme urgency'' (\emph{suma urgencia}).} Currently, urgent bills are proposals that come to the floor with a closed rule: legislators have to vote them up or down, with no possibility to introduce amendments.  When qualified as urgent, the bill that emerges from committee is identical to the one passed by the floor. Urgency protects the agreements reached in committee as they cannot be undone later in the plenary session. 
+In other words, we find that the literature has largely ignored this important consequence of the rule: when bills are brought to the floor having been designated urgent, \emph{they cannot be modified}.\footnote{This is true since March of 2014. Before then, it was true only for one type of urgency, ``supreme urgency'' (\emph{suma urgencia}).} Currently, urgent bills are proposals that come to the floor with a closed rule: legislators have to vote them up or down, with no possibility to introduce amendments.  When qualified as urgent, the bill that emerges from committee is identical to the one passed by the floor. Urgency protects the agreements reached in committee as they cannot be undone later in the plenary session. 
 
 The case of Chile attracts our attention because by means of her fast-track authority the president is able to decide whether a bill proceeds to the floor with a closed rule, or whether it will be open for amendments. This means that, unlike the U.S., where committee members negotiate with the leadership and the Rules Committee to receive closed rules towards floor consideration, in Chile committee members negotiate with the president to receive that label. In other words, in Chile the president takes on the role of the Rules Committee. 
+
+Theoretically, we find that when the preferences of the committee chair and the President are close (on one side of the floor median), the president has strong incentives to fast track bills coming from such committee.  On the contrary, we find that standard consideration of bills happens only when president and committee are on either side of the floor median. By analyzing a dataset that includes all the bills initiated by the president from 1998 until 2014, we find that the probability that a bills is marked as urgent increases when the chair of the committee that has jurisdiction over the bill is close to the president's preferences.   
 
 %This unique presidential prerogative opens the door for multiple strategies both for the committee and the president regarding the conditions under which they will push for a bill to receive the urgency label. 
 
@@ -398,7 +430,7 @@ This is to say, therefore, that the toolbox of formidable legislative powers of 
 
 We stylize the Chilean urgency authority as a game of restrictive procedures inspired by \citet{dion.huber.1996}, with the president in the role of the Rules Committee. Figure \ref{F:game} portrays the game's extended form. The main features of this game are as follows. Unless there is unanimous support to suspend the chamber's rules, every proposal requires a committee report prior to floor consideration (Organic Law, art.~21). The committee $C$ with jurisdiction over a given proposal starts the game, choosing whether or not to report the bill $x_C$ to the floor. No explicit discharge procedure exists in Chile. This confers committees gate-keeping power over policy in their jurisdiction: when the committee withholds a report, the game ends with policy at the status quo $q$. Chilean committees are no different in this respect from those in the U.S.\ Congress. When producing a report, the committee can approve the proposal in whole or in part, amend it, make additions, or reject it (Cámara standing rule 287.8). We interpret this as (positive) agenda power to locate the proposal in policy space: $x_C \in [0,1]$. The president moves next. 
 
-During the legislative process, the president's choice set has two alternatives: let the bill proceed under standard floor consideration, or qualify it as urgent. Standard consideration ends the game with policy at $x_F$. By navigating the plenary session with an open rule, legislators' amendments reshape the bill to the floor median's liking. As in \citet{shepsle.1979}, we take $x_F$ to be the floor median's ideal point, corresponding to a game of full plenary influence. However, if the president marks the bill ``urgent'', this invokes the restrictive consideration rule and presents the floor with a take-it-or-leave-it offer. Unable to amend the proposal, the floor, which moves after the bill was marked urgent, must choose between the reported bill $x_C$ or the status quo, as in \citep{romer.rosenthal.1978}.\footnote{Unlike Dion and Huber's, our game excludes the procedural stage. A rule denial, which ends the game at the status quo, is not available to the Chilean president.}
+During the legislative process, the president's choice set has two alternatives: let the bill proceed under standard floor consideration, or qualify it as urgent. Standard consideration ends the game with policy at $x_F$. By navigating the plenary session with an open rule, legislators' amendments reshape the bill to the floor median's liking. As in \citet{shepsle.1979}, we take $x_F$ to be the floor median's ideal point, corresponding to a game of full plenary influence. However, if the president marks the bill "urgent", this invokes the restrictive consideration rule and presents the floor with a take-it-or-leave-it offer. Unable to amend the proposal, the floor, which moves after the bill was marked urgent, must choose between the reported bill $x_C$ or the status quo, as in \citep{romer.rosenthal.1978}.\footnote{Unlike Dion and Huber's, our game excludes the procedural stage. A rule denial, which ends the game at the status quo, is not available to the Chilean president.}
   
 %\vp{But this [open rule] returns the bill to the committee, no?}
 %\emm{It does, but only if amendments were in fact introduced. Model totally ignores this. Simplistic? Justifiable? May need some elaboration.}
@@ -430,11 +462,7 @@ During the legislative process, the president's choice set has two alternatives:
   \end{tikzpicture}
 \end{figure}
 
-Model analysis is analogous to \citet{dion.huber.1996}. The game has a unique, sub-game perfect equilibrium that we do not derive formally here.\footnote{Equilibrium is akin to \citet{magar.nd,romer.rosenthal.1978,cox.mccubbins.2005,gerber.1996}.} We elaborate the bargaining logic with the example in Figure \ref{F:example}. The points $P$, $C$, and $F$ on the line represent the ideal points of the president, the committee, and the floor median, respectively, while $q$ is the status quo. We assume Euclidean single-peaked and symmetric preferences, so $F_q$ is the symmetric reflection of $q$ on the unidimensional line using $F$ as mirror, i.e, it is the floor median's point of indifference given the location of the status quo. Other relevant reflections are noted likewise; some appear in gray and will be relevant later. Given the model's assumptions, preferred sets are easily gauged: the floor median finds policy under the larger dashed pyramid ($x_C \in [q,F_q]$) preferable to the status quo; likewise, the president prefers policy under the smaller pyramid ($x_C \in [q,P_q]$) to the status quo. 
-
-%As the model assumes standard Euclidian preferences and reflections point to equidistance in the opposite side of an ideal point, preference is easily gauged: the floor finds policy under the larger dashed pyramid ($x_C \in [q,F_q]$) preferable to the status quo; likewise, the president prefers policy under the smaller pyramid ($x_C \in [q,P_q]$) to the status quo. 
-
-/emm{There seem to be minor inconsistencies between the equilibrium that Dion and Huber portray in their Figure 1 and ours here. Might revise for RnR.}
+Model analysis is analogous to \citet{dion.huber.1996}. The game has a unique, sub-game perfect equilibrium that we do not derive formally here.\footnote{Equilibrium is akin to \citet{magar.nd,romer.rosenthal.1978,cox.mccubbins.2005,gerber.1996}. There seem to be minor inconsistencies between the equilibrium that Dion and Huber portray in their Figure 1 and ours here. IS THIS PROBLEMATIC? SHOULD WE ELABORATE? IF NOT, DO WE NEED TO MENTION THE MINOR INCONSISTENCIES HERE?} We elaborate the bargaining logic with the example in Figure \ref{F:example}. The points $P$, $C$, and $F$ on the line represent the ideal points of the president, the committee, and the floor median, respectively, while $q$ is the status quo. We assume Euclidean single-peaked and symmetric preferences, so $F_q$ is the symmetric reflection of $q$ on the unidimensional line using $F$ as mirror, i.e, it is the floor median's point of indifference given the location of the status quo. Other relevant reflections are noted likewise; some appear in gray and will be relevant later. Given the model's assumptions, preferred sets are easily gauged: the floor median finds policy under the larger dashed pyramid ($x_C \in [q,F_q]$) preferable to the status quo; likewise, the president prefers policy under the smaller pyramid ($x_C \in [q,P_q]$) to the status quo. 
 
 Deriving optimal proposal and consideration regime is trivial. Proceeding backwards in the game tree, the floor will accept proposals under the larger pyramid, reject the rest. So everyone anticipates that urgent consideration of proposal $x_C \in [q,F_q]$ beats the status quo. Also, because in the example $F$ is outside the smaller pyramid, all anticipate that the president discards standard consideration ($x_F=F$ would be the outcome). Therefore, in the example the committee can afford to send $x_C=C$.
 
@@ -674,7 +702,7 @@ We now derive empirical implications from our theoretical model by generalizing 
 
 The example discussed falls under profile I (the status quo falls where $P_C \leq q < P$). The equilibrium proposal and consideration regime discussed above, and the equilibrium outcome are listed accordingly. The discrete zones into which the policy space subdivides (the dark-gray, light-gray, and white rectangles) isolate status quos with unchanging equilibrium elements. One or more equilibrium elements mutate for status quos falling in the adjacent zone(s).
 
-We pay attention to consideration regimes: in equilibrium, status quos in dark-gray zones trigger urgent consideration, and those in white zones trigger standard consideration. Status quos in light-gray zones lack a consideration regime because they push the committee to defend the status quo by withholding the bill (gate-keeping). Aided by auxiliary assumptions, empirical implications follow from comparative statics; we discuss three. To start, note that dark-gray zones predominate in Figure \ref{F:predictions} HERE HERE HERE HERE over the light-gray and white. Urgent status corresponds to dark-gray, and the first theoretical prediction follows.
+We pay attention to consideration regimes: in equilibrium, status quos in dark-gray zones trigger urgent consideration, and those in white zones trigger standard consideration. Status quos in light-gray zones lack a consideration regime because they push the committee to defend the status quo by withholding the bill (gate-keeping). Aided by auxiliary assumptions, empirical implications follow from comparative statics; we discuss three. To start, note that dark-gray zones predominate in Figure \ref{F:predictions} HERE HERE HERE HERE over the light-gray and white. Urgent status corresponds to dark-gray, and the first theoretical prediction follows:
 
 \begin{description}
   \item [Hypothesis 1] Other things constant, urgent bill consideration is more likely than standard bill consideration. 
